# pixelblaze_camera_mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
pixelblaze_camera_mapper/: camera.py  config.py  mapping.py  pixelblaze.py
pixelblaze_patterns/: Half and Half with missing pixels.epe  Half and Half with missing pixels.js  binary mapping.epe  binary mapping.js  blink pixel.epe  blink pixel.js  pixel index.epe  pixel index.js
