[tool.poetry]
name = "pixelblaze-camera-mapper"
version = "0.1.0"
description = "Creates a pixelmap in pixelblaze using the camera"
authors = ["Sarah van der Bleek <sarah@vanderbleek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
pixelblaze-client = {git = "https://github.com/savdb/pixelblaze-client.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
